# nanook

./: .gitignore  README.md  pyproject.toml
src/nanook/: frame.py  metrics.py  preprocess.py  transform.py  typing.py
src/nanuk/: frame.py  preprocess.py  transform.py  typing.py
tests/: conftest.py  test_frame.py  test_preprocess.py  test_transform.py
