[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanook"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.d.hill@duke.edu" }]
description = "Polars data science utilities"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Elliot-D-Hill/nanook"
Issues = "https://github.com/Elliot-D-Hill/nanook/issues"
